회원가입 및 로그인 기능

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  /* @apply: 일반 css 파일에서 tailwind 적용하는 법 */
+  @apply bg-gray-100;
+}
